feat: update grpc-spring-boot-starter to version 0.0.2, enhance gRPC server configuration with virtual thread support and shutdown grace period